# vesty

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json
.agents/: 00-research.md  01-requirements.md  02-architecture.md  03-module-design.md  04-vst3-adapter.md  05-webview-ui.md  06-realtime-memory.md  07-build-packaging.md  08-developer-guide.md  09-crash-safety-and-testing.md  10-roadmap.md  11-latest-deps-feasibility.md  12-jsbridge-design.md  13-implementation-status.md  14-completion-audit.md  README.md
.github/workflows/: ci.yml  release.yml
crates/vesty/: Cargo.toml
crates/vesty-bridge/: Cargo.toml
crates/vesty-bridge/src/: gesture.rs  lib.rs  logging.rs  request.rs  runtime.rs  state.rs  subscription.rs  tests.rs  transport.rs
crates/vesty-build/: Cargo.toml
crates/vesty-build/src/: assets.rs  config.rs  fs_support.rs  lib.rs  manifest.rs  package.rs  platform.rs  tests.rs  utility.rs  validation.rs
crates/vesty-cli/: Cargo.toml
crates/vesty-cli/src/: ci_evidence.rs  ci_release_checks.rs  ci_vst3_artifacts.rs  daw_collection.rs  daw_evidence.rs  development.rs  main.rs  package_validation.rs  platform_smoke.rs  publishing.rs  release_evidence.rs  release_evidence_validation.rs  release_planning.rs  release_readiness.rs  scaffold.rs  smoke_host.rs  validate_evidence.rs  vst3_sdk.rs
crates/vesty-cli/src/tests/: mod.rs  part1.rs  part1_2.rs  part1_3.rs  part1_4.rs  part2.rs  part2_2.rs  part2_3.rs  part2_4.rs
crates/vesty-core/: Cargo.toml
crates/vesty-core/src/: host.rs  lib.rs  limits.rs  metadata.rs  plugin.rs  process.rs  program.rs  state.rs  tests.rs  ui.rs
crates/vesty-ipc/: Cargo.toml
crates/vesty-ipc/src/: codec.rs  export.rs  lib.rs  packet.rs  protocol.rs  tests.rs
crates/vesty-macros/: Cargo.toml
crates/vesty-macros/src/: lib.rs
crates/vesty-params/: Cargo.toml
crates/vesty-params/src/: id.rs  lib.rs  parameter.rs  registry.rs  smoothing.rs  spec.rs  tests.rs  value.rs
crates/vesty-rt/: Cargo.toml
crates/vesty-rt/src/: lib.rs
crates/vesty-ui/: Cargo.toml
crates/vesty-ui-wry/: Cargo.toml
crates/vesty-ui-wry/src/: assets.rs  bridge_script.rs  lib.rs  native_parent.rs  runtime.rs  tests.rs
crates/vesty-ui/src/: lib.rs
crates/vesty-vst3/: Cargo.toml
crates/vesty-vst3-sys/: Cargo.toml
crates/vesty-vst3-sys/src/: backend.rs  baseline.rs  constants.rs  emit.rs  emit_interfaces.rs  helpers.rs  lib.rs  models.rs  plan.rs  probe.rs  surface.rs  tests.rs
crates/vesty-vst3/src/: bindings_impl.rs  lib.rs
crates/vesty-vst3/src/bindings_impl/: controller.rs  factory.rs  processor.rs  tests.rs
crates/vesty-vst3/src/tests/: mod.rs
crates/vesty-vst3/src/tests/bindings/: buses.rs  editor.rs  factory.rs  fixtures.rs  mod.rs  process_events.rs  process_safety.rs  telemetry.rs  web_ui.rs
crates/vesty/src/: lib.rs
docs/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svedocs.config.ts  svelte.config.js  vite.config.ts
docs/content/docs/: index.md  quick-start.md  troubleshooting.md
docs/content/docs/concepts/: architecture.md  index.md  realtime-safety.md
docs/content/docs/guides/: complete-plugin.md  dsp.md  index.md  parameters.md  state-and-lifecycle.md  web-ui.md
docs/content/docs/reference/: index.md  jsbridge.md  plugin-api.md
docs/content/docs/tooling/: ai-development.md  cli.md  framework-release.md  index.md  packaging.md  release-evidence.md
docs/content/docs/zh/: index.md  quick-start.md  troubleshooting.md
docs/content/docs/zh/concepts/: architecture.md  index.md  realtime-safety.md
docs/content/docs/zh/guides/: complete-plugin.md  dsp.md  index.md  parameters.md  state-and-lifecycle.md  web-ui.md
docs/content/docs/zh/reference/: index.md  jsbridge.md  plugin-api.md
docs/content/docs/zh/tooling/: ai-development.md  cli.md  framework-release.md  index.md  packaging.md  release-evidence.md
docs/content/pages/: index.md
docs/content/pages/zh/: index.md
docs/src/: app.d.ts
docs/src/lib/: Landing.svelte
docs/src/lib/server/: env.ts
docs/src/lib/styles/: vesty.css
docs/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
docs/src/routes/[...path]/: +page.ts
docs/src/routes/api/ask/: +server.ts
docs/src/routes/api/search/: +server.ts
docs/src/routes/og/[...path]/: +server.ts
docs/src/routes/robots.txt/: +server.ts
docs/src/routes/sitemap.xml/: +server.ts
examples/gain/: Cargo.toml  params.specs.json  vesty-parameters.json  vesty.toml
examples/gain/src/: lib.rs
examples/midi-synth/: Cargo.toml  params.specs.json  vesty-parameters.json  vesty.toml
examples/midi-synth/src/: lib.rs
examples/web-ui-param-demo/: Cargo.toml  params.specs.json  vesty-parameters.json  vesty.toml
examples/web-ui-param-demo/src/: lib.rs
examples/web-ui-param-demo/ui/: package.json
examples/web-ui-param-demo/ui/scripts/: build.mjs  dev.mjs
examples/web-ui-param-demo/ui/src/: index.html  index.js
scripts/: install.ps1  install.sh
scripts/release/: publish-crates.sh  publish-npm.sh  verify-version.mjs
skills/vesty-plugin-dev/: SKILL.md
skills/vesty-plugin-dev/agents/: openai.yaml
skills/vesty-plugin-dev/references/: architecture.md  realtime-safety.md  testing-and-release.md  web-ui.md
skills/vesty-plugin-dev/scripts/: verify.sh
