[package]
name = "vesty-params"
description = "Realtime-safe parameter definitions, conversion, smoothing and schema export for Vesty."
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
ts-rs.workspace = true

[dev-dependencies]
serde_json.workspace = true
