[package]
name = "vesty-vst3-sys"
description = "VST3 SDK binding baseline and generated-header probe utilities for Vesty."
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["upstream-vst3"]
upstream-vst3 = ["dep:vst3"]
generated-headers = []

[dependencies]
serde.workspace = true
sha2.workspace = true
vst3 = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
