[package]
name = "vesty-example-web-ui-param-demo"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vesty.workspace = true
vesty-ipc.workspace = true
